Fix underscore not being visible in terminal (#590)
* Fix underscore not being visible in terminal

* Fix for linux

--- a/src/style/_terminal.scss
+++ b/src/style/_terminal.scss
@@ -82,6 +82,7 @@
 
 	.terminal-message__sign {
 		color: var(--color-text);
+		line-height: 1.3em;
 	}
 }
 
@@ -92,8 +93,7 @@
 	color: var(--color-text);
 	font-family: inherit;
 	font-size: 100%;
-	height: 1em;
-	line-height: 1.1;
+	line-height: 1.3em;
 	margin: 0;
 	padding: 0;
 	width: 100%;
@@ -105,7 +105,7 @@
 
 .terminal__input--autocomplete {
 	color: var(--color-text-disabled);
-	height: 1em;
+	line-height: 1.3em;
 	padding-left: 1.2em;
 	pointer-events: none;
 	position: absolute;
